# serializer version: 1
# name: test_switch_state[Air Purifier 131s]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'air-purifier',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'LV-PUR131S',
      'name': 'Air Purifier 131s',
      'name_by_user': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_switch_state[Air Purifier 131s].1
  list([
  ])
# ---
# name: test_switch_state[Air Purifier 200s]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'asd_sdfKIHG7IJHGwJGJ7GJ_ag5h3G55',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'Core200S',
      'name': 'Air Purifier 200s',
      'name_by_user': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_switch_state[Air Purifier 200s].1
  list([
  ])
# ---
# name: test_switch_state[Air Purifier 400s]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '400s-purifier',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'LAP-C401S-WJP',
      'name': 'Air Purifier 400s',
      'name_by_user': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_switch_state[Air Purifier 400s].1
  list([
  ])
# ---
# name: test_switch_state[Air Purifier 600s]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '600s-purifier',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'LAP-C601S-WUS',
      'name': 'Air Purifier 600s',
      'name_by_user': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_switch_state[Air Purifier 600s].1
  list([
  ])
# ---
# name: test_switch_state[Dimmable Light]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'dimmable-bulb',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'ESL100',
      'name': 'Dimmable Light',
      'name_by_user': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_switch_state[Dimmable Light].1
  list([
  ])
# ---
# name: test_switch_state[Dimmer Switch]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'dimmable-switch',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'ESWD16',
      'name': 'Dimmer Switch',
      'name_by_user': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_switch_state[Dimmer Switch].1
  list([
  ])
# ---
# name: test_switch_state[Humidifier 200s]
  list([
  ])
# ---
# name: test_switch_state[Humidifier 200s].1
  list([
  ])
# ---
# name: test_switch_state[Humidifier 600S]
  list([
  ])
# ---
# name: test_switch_state[Humidifier 600S].1
  list([
  ])
# ---
# name: test_switch_state[Outlet]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'outlet',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'wifi-switch-1.3',
      'name': 'Outlet',
      'name_by_user': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_switch_state[Outlet].1
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'switch',
      'entity_category': None,
      'entity_id': 'switch.outlet',
      'has_entity_name': False,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Outlet',
      'platform': 'vesync',
      'supported_features': 0,
      'translation_key': None,
      'unique_id': 'outlet',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_switch_state[Outlet][switch.outlet]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Outlet',
    }),
    'context': <ANY>,
    'entity_id': 'switch.outlet',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_state[Temperature Light]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'tunable-bulb',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'ESL100CW',
      'name': 'Temperature Light',
      'name_by_user': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_switch_state[Temperature Light].1
  list([
  ])
# ---
# name: test_switch_state[Wall Switch]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'switch',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'ESWL01',
      'name': 'Wall Switch',
      'name_by_user': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_switch_state[Wall Switch].1
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'switch',
      'entity_category': None,
      'entity_id': 'switch.wall_switch',
      'has_entity_name': False,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Wall Switch',
      'platform': 'vesync',
      'supported_features': 0,
      'translation_key': None,
      'unique_id': 'switch',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_switch_state[Wall Switch][switch.wall_switch]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Wall Switch',
    }),
    'context': <ANY>,
    'entity_id': 'switch.wall_switch',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
